star reviews added

--- a/index.html
+++ b/index.html
@@ -89,6 +89,9 @@
                 <div class="product-info">
                     <h4>Pink Running Shoe</h4>
                     <p><del>TK 15,999.00</del> <span class="recent-price">TK 11,999.00</span></p>
+                    <div class="stars">
+                        ★★★★☆
+                    </div>
                     <a href="#">Shop Now</a>
                 </div>
             </div>
@@ -99,6 +102,9 @@
                 <div class="product-info">
                     <h4>Blue Running Shoe</h4>
                     <p><del>TK 13,999.00</del> <span class="recent-price">TK 10,999.00</span></p>
+                    <div class="stars">
+                        ★★★☆☆
+                    </div>
                     <a href="#">Shop Now</a>
                 </div>
             </div>
@@ -110,6 +116,9 @@
                 <div class="product-info">
                     <h4>Light Blue Sneaker</h4>
                     <p><del>TK 18,999.00</del> <span class="recent-price">TK 15,999.00</span></p>
+                    <div class="stars">
+                        ★★★★☆
+                    </div>
                     <a href="#">Shop Now</a>
                 </div>
             </div>
@@ -120,6 +129,9 @@
                 <div class="product-info">
                     <h4>Keds Blue Athletic</h4>
                     <p><del>TK 11,999.00</del> <span class="recent-price">TK 10,999.00</span></p>
+                    <div class="stars">
+                        ★★☆☆☆
+                    </div>
                     <a href="#">Shop Now</a>
                 </div>
             </div>
@@ -130,6 +142,9 @@
                 <div class="product-info">
                     <h4>Blue Running Shoe</h4>
                     <p><del>TK 15,999.00</del> <span class="recent-price">TK 12,999.00</span></p>
+                    <div class="stars">
+                        ★★★☆☆
+                    </div>
                     <a href="#">Shop Now</a>
                 </div>
             </div>
@@ -141,6 +156,9 @@
                 <div class="product-info">
                     <h4>Green Running Shoe</h4>
                     <p><del>TK 16,999.00</del> <span class="recent-price">TK 13,999.00</span></p>
+                    <div class="stars">
+                        ★★★☆☆
+                    </div>
                     <a href="#">Shop Now</a>
                 </div>
             </div>
