cart, user icon added and responsiveness improved

--- a/index.html
+++ b/index.html
@@ -30,6 +30,13 @@
                     <li class="search">
                         <input type="text" placeholder="Search products...">
                         <button>Search</button>
+                        <a href="#" class="cart">
+                            <img src="/assets/svg/cart-2-svgrepo-com.svg" alt="Shopping cart">
+                        </a>
+    
+                        <a href="#" class="user">
+                            <img src="/assets/svg/account-user-person-svgrepo-com.svg" alt="User account">
+                        </a>
                     </li>
                 </div>
             </ul>
