customer review added

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                         <a href="#" class="cart">
                             <img src="/assets/svg/cart-2-svgrepo-com.svg" alt="Shopping cart">
                         </a>
-    
+
                         <a href="#" class="user">
                             <img src="/assets/svg/account-user-person-svgrepo-com.svg" alt="User account">
                         </a>
@@ -175,9 +175,39 @@
 
     <!-- Reviews -->
     <section class="testimonials">
-        <div class="container">
-            <h2>What Our Customers Say</h2>
-            <!-- Testimonial carousel or grid -->
+        <h2 class="t-text">What Our Customers Say</h2>
+        <p class="review-avg">4.8 average rating from 1814 reviews</p>
+        <div class="customer-container">
+            <div class="testimonial">
+                <div class="review-stars">
+                    ★★★★★
+                </div>
+                <p>"This product really helped me. Highly recommended!"</p>
+                <div class="author">
+                    <img src="path_to_image_of_Maria_Anna" alt="Maria Anna">
+                    <p> - Maria Anna</p>
+                </div>
+            </div>
+            <div class="testimonial">
+                <div class="review-stars">
+                    ★★★☆☆
+                </div>
+                <p>"Excellent customer service. They were always there to help."</p>
+                <div class="author">
+                    <img src="/images/user_1.jpg" alt="Julia Keys">
+                    <p> - Julia Keys</p>
+                </div>
+            </div>
+            <div class="testimonial">
+                <div class="review-stars">
+                    ★★★☆☆
+                </div>
+                <p>"Fast delivery and high-quality products. I'm very satisfied."</p>
+                <div class="author">
+                    <img src="path_to_image_of_Luis_Adrian" alt="Luis Adrian">
+                    <p> - Luis Adrian</p>
+                </div>
+            </div>
         </div>
     </section>
 
