add to cart and favourite icon added

--- a/index.html
+++ b/index.html
@@ -31,12 +31,18 @@
                     <li class="search">
                         <input type="text" placeholder="Search products...">
                         <button>Search</button>
-                        <a href="#" class="cart">
-                            <img src="/assets/svg/cart-2-svgrepo-com.svg" alt="Shopping cart">
+                        <a href="#" class="user">
+                            <img src="/assets/svg/user-tick-svgrepo-com.svg" alt="User account">
                         </a>
 
-                        <a href="#" class="user">
-                            <img src="/assets/svg/account-user-person-svgrepo-com.svg" alt="User account">
+                        <a href="#" class="cart">
+                            <img src="/assets/svg/cart-alt-1-svgrepo-com.svg" alt="Shopping cart">
+                            <div class="cart-notification">7</div>
+                        </a>
+
+                        <a href="#" class="favourite">
+                            <img src="/assets/svg/heart-svgrepo-com.svg" alt="favourite Items">
+                            <div class="favourite-notification">0</div>
                         </a>
                     </li>
                 </div>
