customer picture added

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
                 </div>
                 <p>"This product really helped me. Highly recommended!"</p>
                 <div class="author">
-                    <img src="path_to_image_of_Maria_Anna" alt="Maria Anna">
+                    <img src="/images/user_1.jpg" alt="Maria Anna">
                     <p> - Maria Anna</p>
                 </div>
             </div>
@@ -200,7 +200,7 @@
                 </div>
                 <p>"Excellent customer service. They were always there to help."</p>
                 <div class="author">
-                    <img src="/images/user_1.jpg" alt="Julia Keys">
+                    <img src="/images/user_2.jpg" alt="Julia Keys">
                     <p> - Julia Keys</p>
                 </div>
             </div>
@@ -210,7 +210,7 @@
                 </div>
                 <p>"Fast delivery and high-quality products. I'm very satisfied."</p>
                 <div class="author">
-                    <img src="path_to_image_of_Luis_Adrian" alt="Luis Adrian">
+                    <img src="/images/user_3.jpg" alt="Luis Adrian">
                     <p> - Luis Adrian</p>
                 </div>
             </div>
