--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" href="/assets/favicon.svg">
     <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 
 <body>
@@ -219,11 +220,48 @@
 
     <!-- Footer -->
     <footer class="footer-border">
-        <div class="container">
-            <p>&copy;ITOSSO Shoe Store. Powered by ITOSSO Shoe Store.</p>
+        <div class="footer-container">
+            <div class="footer-section">
+                <h4>CATEGORIES</h4>
+                <ul>
+                    <li><a href="#">Women</a></li>
+                    <li><a href="#">Men</a></li>
+                    <li><a href="#">Kids</a></li>
+                    <li><a href="#">Students</a></li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h4>HELP</h4>
+                <ul>
+                    <li><a href="#">Track Order</a></li>
+                    <li><a href="#">Returns</a></li>
+                    <li><a href="#">Shipping</a></li>
+                    <li><a href="#">FAQs</a></li>
+                </ul>
+            </div>
+            <div class="footer-section">
+                <h4>GET IN TOUCH</h4>
+                <ul>
+                    <li>Any questions? ,<br>Let us know in store at 105 & 109, <br> Road -1, Block-F, Banani, Dhaka - 1213.
+                        <br> or call us on +880 1618 999 555
+                    </li>
+                </ul>
+                <div class="social-accounts">
+                    <a href="#"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#"><i class="fab fa-twitter"></i></a>
+                    <a href="#"><i class="fab fa-instagram"></i></a>
+                </div>
+            </div>
+            <div class="footer-section">
+                <h4>NEWSLETTER</h4>
+                <div class="subscribe-container">
+                <input type="email" placeholder="email@example.com" class="newsletter-input">
+                <button class="subscribe-button">SUBSCRIBE</button>
+            </div>
+            </div>
         </div>
+        <p>&copy;ITOSSO Shoe Store. Powered by ITOSSO Shoe Store.</p>
     </footer>
-
     <script src="scripts.js"></script>
 </body>
 
