quick view feature implemented

--- a/index.html
+++ b/index.html
@@ -13,8 +13,6 @@
 
 <body>
     <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
-
-    <!-- Text on top of the nav bar -->
     <div class="top-text">Free Shipping on all orders for EID 2024</div>
 
     <!-- Navigation -->
@@ -99,8 +97,8 @@
         <div class="p-container">
             <div class="product-card">
                 <div class="sale">Sale!</div>
-                <img src="images/shoe_1.jpg" alt="Pink training shoe">
-                <div class="quick-view">Quick View</div>
+                <img class="product-image" src="images/shoe_1.jpg" alt="Training shoe">
+                <a class="quick-view-button" href="#"><div class="quick-view">Quick View</div></a>
                 <div class="product-info">
                     <h4>Pink Running Shoe</h4>
                     <p><del>TK 15,999.00</del> <span class="recent-price">TK 11,999.00</span></p>
@@ -112,9 +110,8 @@
             </div>
 
             <div class="product-card">
-                <img src="images/shoe_2.jpg" alt="Pink training shoe">
-                <div class="quick-view">Quick View</div>
-                <div class="product-info">
+                <img class="product-image" src="images/shoe_2.jpg" alt="Training shoe">
+                <a class="quick-view-button" href="#"><div class="quick-view">Quick View</div></a>                <div class="product-info">
                     <h4>Blue Running Shoe</h4>
                     <p><del>TK 13,999.00</del> <span class="recent-price">TK 10,999.00</span></p>
                     <div class="stars">
@@ -126,9 +123,8 @@
 
             <div class="product-card">
                 <div class="sale">Sale!</div>
-                <img src="images/shoe_3.jpg" alt="Pink training shoe">
-                <div class="quick-view">Quick View</div>
-                <div class="product-info">
+                <img class="product-image" src="images/shoe_3.jpg" alt="Training shoe">
+                <a class="quick-view-button" href="#"><div class="quick-view">Quick View</div></a>                <div class="product-info">
                     <h4>Light Blue Sneaker</h4>
                     <p><del>TK 18,999.00</del> <span class="recent-price">TK 15,999.00</span></p>
                     <div class="stars">
@@ -139,9 +135,8 @@
             </div>
 
             <div class="product-card">
-                <img src="images/shoe_4.jpg" alt="Pink training shoe">
-                <div class="quick-view">Quick View</div>
-                <div class="product-info">
+                <img class="product-image" src="images/shoe_4.jpg" alt="Training shoe">
+                <a class="quick-view-button" href="#"><div class="quick-view">Quick View</div></a>                <div class="product-info">
                     <h4>Keds Blue Athletic</h4>
                     <p><del>TK 11,999.00</del> <span class="recent-price">TK 10,999.00</span></p>
                     <div class="stars">
@@ -152,8 +147,8 @@
             </div>
 
             <div class="product-card">
-                <img src="images/shoe_5.jpg" alt="Pink training shoe">
-                <div class="quick-view">Quick View</div>
+                <img class="product-image" src="images/shoe_5.jpg" alt="Training shoe">
+                <a class="quick-view-button" href="#"><div class="quick-view">Quick View</div></a>
                 <div class="product-info">
                     <h4>Blue Running Shoe</h4>
                     <p><del>TK 15,999.00</del> <span class="recent-price">TK 12,999.00</span></p>
@@ -166,8 +161,8 @@
 
             <div class="product-card">
                 <div class="sale">Sale!</div>
-                <img src="images/shoe_6.jpg" alt="Pink training shoe">
-                <div class="quick-view">Quick View</div>
+                <img class="product-image" src="images/shoe_6.jpg" alt="Training shoe">
+                <a class="quick-view-button" href="#"><div class="quick-view">Quick View</div></a>
                 <div class="product-info">
                     <h4>Green Running Shoe</h4>
                     <p><del>TK 16,999.00</del> <span class="recent-price">TK 13,999.00</span></p>
@@ -177,7 +172,6 @@
                     <a href="#">Shop Now</a>
                 </div>
             </div>
-        </div>
     </section>
 
     <!-- Reviews -->
@@ -262,7 +256,7 @@
         </div>
         <p>&copy;ITOSSO Shoe Store. Powered by ITOSSO Shoe Store.</p>
     </footer>
-    <script src="scripts.js"></script>
+    <script src="/js/script.js"></script>
 </body>
 
 </html>
