product page added

--- a/index.html
+++ b/index.html
@@ -105,8 +105,7 @@
                     <div class="stars">
                         ★★★★☆
                     </div>
-                    <a href="#">Shop Now</a>
-                </div>
+                    <a href="product-page.html">Shop Now</a>                </div>
             </div>
 
             <div class="product-card">
