specific product details added

--- a/index.html
+++ b/index.html
@@ -58,22 +58,19 @@
             <button type="button" data-bs-target="#carouselCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
         </div>
         <div class="carousel-inner">
-            <div class="carousel-item active hero"
-                style="background-image: url('/images/redd-f-REyoFHP9pw8-unsplash.jpg')">
+            <div class="carousel-item active hero" style="background-image: url('/images/carousel-image_2.jpg')">
                 <div class="carousel-caption d-none d-md-block text-upper">
                     <h5 class="big-title">Nike</h5>
                     <p class="big-text">Discover the latest men's lifestyle and activewear from Nike.</p>
                 </div>
             </div>
-            <div class="carousel-item hero"
-                style="background-image: url('/images/will-suddreth-1pjRN2kphIs-unsplash.jpg')">
+            <div class="carousel-item hero" style="background-image: url('/images/carousel-image_3.jpg')">
                 <div class="carousel-caption d-none d-md-block text-left">
                     <h5 class="big-title">Adidas</h5>
                     <p class="big-text">Shop the latest selection of adidas Ultra Boost Shoes at Foot Locker.</p>
                 </div>
             </div>
-            <div class="carousel-item hero"
-                style="background-image: url('/images/thibault-penin-rlKUNyHUPGc-unsplash.jpg')">
+            <div class="carousel-item hero" style="background-image: url('/images/carousel-image_1.jpg')">
                 <div class="carousel-caption d-none d-md-block text-middle">
                     <h5 class="big-title">UGG Australia</h5>
                     <p class="big-text">100% Australian Made UGG Boots, UGG Slippers, Sheepskins & Accessories
@@ -97,78 +94,94 @@
         <div class="p-container">
             <div class="product-card">
                 <div class="sale">Sale!</div>
-                <img class="product-image" src="images/shoe_1.jpg" alt="Training shoe">
-                <a class="quick-view-button" href="#"><div class="quick-view">Quick View</div></a>
+                <img class="product-image" src="images/product_1.jpg" alt="Training shoe">
+                <a class="quick-view-button" href="#">
+                    <div class="quick-view">Quick View</div>
+                </a>
                 <div class="product-info">
                     <h4>Pink Running Shoe</h4>
                     <p><del>TK 15,999.00</del> <span class="recent-price">TK 11,999.00</span></p>
                     <div class="stars">
                         ★★★★☆
                     </div>
-                    <a href="product-page.html">Shop Now</a>                </div>
+                    <a href="#" onclick="goToProductPage('images/product_1.jpg')">Shop Now</a>
+                </div>
             </div>
 
             <div class="product-card">
-                <img class="product-image" src="images/shoe_2.jpg" alt="Training shoe">
-                <a class="quick-view-button" href="#"><div class="quick-view">Quick View</div></a>                <div class="product-info">
+                <img class="product-image" src="images/product_2.jpg" alt="Training shoe">
+                <a class="quick-view-button" href="#">
+                    <div class="quick-view">Quick View</div>
+                </a>
+                <div class="product-info">
                     <h4>Blue Running Shoe</h4>
                     <p><del>TK 13,999.00</del> <span class="recent-price">TK 10,999.00</span></p>
                     <div class="stars">
                         ★★★☆☆
                     </div>
-                    <a href="#">Shop Now</a>
+                    <a href="#" onclick="goToProductPage('images/product_2.jpg')">Shop Now</a>
                 </div>
             </div>
 
             <div class="product-card">
                 <div class="sale">Sale!</div>
-                <img class="product-image" src="images/shoe_3.jpg" alt="Training shoe">
-                <a class="quick-view-button" href="#"><div class="quick-view">Quick View</div></a>                <div class="product-info">
+                <img class="product-image" src="images/product_3.jpg" alt="Training shoe">
+                <a class="quick-view-button" href="#">
+                    <div class="quick-view">Quick View</div>
+                </a>
+                <div class="product-info">
                     <h4>Light Blue Sneaker</h4>
                     <p><del>TK 18,999.00</del> <span class="recent-price">TK 15,999.00</span></p>
                     <div class="stars">
                         ★★★★☆
                     </div>
-                    <a href="#">Shop Now</a>
+                    <a href="#" onclick="goToProductPage('images/product_3.jpg')">Shop Now</a>
                 </div>
             </div>
 
             <div class="product-card">
-                <img class="product-image" src="images/shoe_4.jpg" alt="Training shoe">
-                <a class="quick-view-button" href="#"><div class="quick-view">Quick View</div></a>                <div class="product-info">
+                <img class="product-image" src="images/product_4.jpg" alt="Training shoe">
+                <a class="quick-view-button" href="#">
+                    <div class="quick-view">Quick View</div>
+                </a>
+                <div class="product-info">
                     <h4>Keds Blue Athletic</h4>
                     <p><del>TK 11,999.00</del> <span class="recent-price">TK 10,999.00</span></p>
                     <div class="stars">
                         ★★☆☆☆
                     </div>
-                    <a href="#">Shop Now</a>
+                    <a href="#" onclick="goToProductPage('images/product_4.jpg')">Shop Now</a>
                 </div>
             </div>
 
             <div class="product-card">
-                <img class="product-image" src="images/shoe_5.jpg" alt="Training shoe">
-                <a class="quick-view-button" href="#"><div class="quick-view">Quick View</div></a>
+                <img class="product-image" src="images/product_5.jpg" alt="Training shoe">
+                <a class="quick-view-button" href="#">
+                    <div class="quick-view">Quick View</div>
+                </a>
                 <div class="product-info">
                     <h4>Blue Running Shoe</h4>
                     <p><del>TK 15,999.00</del> <span class="recent-price">TK 12,999.00</span></p>
                     <div class="stars">
                         ★★★☆☆
                     </div>
-                    <a href="#">Shop Now</a>
+                    <a href="#" onclick="goToProductPage('images/product_5.jpg')">Shop Now</a>
                 </div>
             </div>
 
             <div class="product-card">
                 <div class="sale">Sale!</div>
-                <img class="product-image" src="images/shoe_6.jpg" alt="Training shoe">
-                <a class="quick-view-button" href="#"><div class="quick-view">Quick View</div></a>
+                <img class="product-image" src="images/product_6.jpg" alt="Training shoe">
+                <a class="quick-view-button" href="#">
+                    <div class="quick-view">Quick View</div>
+                </a>
                 <div class="product-info">
                     <h4>Green Running Shoe</h4>
                     <p><del>TK 16,999.00</del> <span class="recent-price">TK 13,999.00</span></p>
                     <div class="stars">
                         ★★★☆☆
                     </div>
-                    <a href="#">Shop Now</a>
+                    <a href="#" onclick="goToProductPage('images/product_6.jpg')">Shop Now</a>
                 </div>
             </div>
     </section>
@@ -235,7 +248,8 @@
             <div class="footer-section">
                 <h4>GET IN TOUCH</h4>
                 <ul>
-                    <li>Any questions? ,<br>Let us know in store at 105 & 109, <br> Road -1, Block-F, Banani, Dhaka - 1213.
+                    <li>Any questions? ,<br>Let us know in store at 105 & 109, <br> Road -1, Block-F, Banani, Dhaka -
+                        1213.
                         <br> or call us on +880 1618 999 555
                     </li>
                 </ul>
@@ -248,9 +262,9 @@
             <div class="footer-section">
                 <h4>NEWSLETTER</h4>
                 <div class="subscribe-container">
-                <input type="email" placeholder="email@example.com" class="newsletter-input">
-                <button class="subscribe-button">SUBSCRIBE</button>
-            </div>
+                    <input type="email" placeholder="email@example.com" class="newsletter-input">
+                    <button class="subscribe-button">SUBSCRIBE</button>
+                </div>
             </div>
         </div>
         <p>&copy;ITOSSO Shoe Store. Powered by ITOSSO Shoe Store.</p>
