add to cart counter added

--- a/index.html
+++ b/index.html
@@ -19,13 +19,14 @@
     <nav>
         <div class="container">
             <ul class="nav-links">
-                <li class="logo">ITOOSO</li>
+                <li class="logo">E-Commerce</li>
                 <div class="center-links">
                     <li><a href="#">HOME</a></li>
                     <li><a href="#">SHOP</a></li>
                     <li><a href="#">ABOUT</a></li>
                     <li><a href="#">CONTACT</a></li>
                 </div>
+
                 <div>
                     <li class="search">
                         <input type="text" placeholder="Search products...">
@@ -64,12 +65,14 @@
                     <p class="big-text">Discover the latest men's lifestyle and activewear from Nike.</p>
                 </div>
             </div>
+
             <div class="carousel-item hero" style="background-image: url('/images/carousel-image_3.jpg')">
                 <div class="carousel-caption d-none d-md-block text-left">
                     <h5 class="big-title">Adidas</h5>
                     <p class="big-text">Shop the latest selection of adidas Ultra Boost Shoes at Foot Locker.</p>
                 </div>
             </div>
+
             <div class="carousel-item hero" style="background-image: url('/images/carousel-image_1.jpg')">
                 <div class="carousel-caption d-none d-md-block text-middle">
                     <h5 class="big-title">UGG Australia</h5>
@@ -78,10 +81,12 @@
                 </div>
             </div>
         </div>
+
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselCaptions" data-bs-slide="prev">
             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Previous</span>
         </button>
+
         <button class="carousel-control-next" type="button" data-bs-target="#carouselCaptions" data-bs-slide="next">
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="visually-hidden">Next</span>
@@ -200,6 +205,7 @@
                     <p> - Maria Anna</p>
                 </div>
             </div>
+
             <div class="testimonial">
                 <div class="review-stars">
                     ★★★☆☆
@@ -210,6 +216,7 @@
                     <p> - Julia Keys</p>
                 </div>
             </div>
+
             <div class="testimonial">
                 <div class="review-stars">
                     ★★★☆☆
@@ -236,6 +243,7 @@
                     <li><a href="#">Students</a></li>
                 </ul>
             </div>
+
             <div class="footer-section">
                 <h4>HELP</h4>
                 <ul>
@@ -245,6 +253,7 @@
                     <li><a href="#">FAQs</a></li>
                 </ul>
             </div>
+
             <div class="footer-section">
                 <h4>GET IN TOUCH</h4>
                 <ul>
@@ -259,6 +268,7 @@
                     <a href="#"><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
+
             <div class="footer-section">
                 <h4>NEWSLETTER</h4>
                 <div class="subscribe-container">
@@ -267,7 +277,7 @@
                 </div>
             </div>
         </div>
-        <p>&copy;ITOSSO Shoe Store. Powered by ITOSSO Shoe Store.</p>
+        <p>&copy;E-Commerce Shoe Store. Powered by E-Commerce Shoe Store.</p>
     </footer>
     <script src="/js/script.js"></script>
 </body>
