--- a/product-page.html
+++ b/product-page.html
@@ -19,7 +19,7 @@
     <nav>
         <div class="container">
             <ul class="nav-links">
-                <li class="logo">ITOOSO</li>
+                <li class="logo">E-Commerce</li>
                 <div class="center-links">
                     <li><a href="index.html">HOME</a></li>
                     <li><a href="#">SHOP</a></li>
@@ -59,9 +59,11 @@
                 <h6 class="common-style">Mens, Sneaker</h6>
                 <h2>Men's Earth-Tone Sneaker</h2>
             </div>
+
             <div class="product-price">
                 <p class="price">TK 15,999.00 & Free Shipping</p>
             </div>
+
             <div class="product-details">
                 <p>The Classic Blue Sneaker is a timeless staple in any wardrobe.
                     Crafted with high-quality materials, these sneakers offer superior comfort and durability.
@@ -69,11 +71,18 @@
                     Perfect for casual wear, these sneakers can also be dressed up for a smart-casual look.
                     Experience the perfect blend of style and comfort with the Classic Blue Sneaker.</p>
             </div>
+
             <div class="add-to-cart">
                 <form action="#">
+                    <div id="quantity-container">
+                        <button type="button" id="decrement">-</button>
+                        <span id="quantity">1</span>
+                        <button type="button" id="increment">+</button>
+                    </div>
                     <button type="submit">ADD TO CART</button>
                 </form>
             </div>
+
             <h6 class="product-cat common-style">Categories: Men, Sneaker</h6>
             <div class="payment-methods">
                 <h6 class="payment-information">Payment Methods</h6>
@@ -108,9 +117,7 @@
             <div class="footer-section">
                 <h4>GET IN TOUCH</h4>
                 <ul>
-                    <li>Any questions?,<br>Let us know in store at 105 & 109, <br>Road -1, Block-F, Banani, Dhaka - 1213.
-                        <br> or call us on +880 1618 999 555
-                    </li>
+                    <li>Any questions?,<br>Let us know in store at 105 & 109, <br>Road -1, Block-F, Banani, Dhaka - 1213. <br> or call us on +880 1618 999 555</li>
                 </ul>
                 <div class="social-accounts">
                     <a href="#"><i class="fab fa-facebook-f"></i></a>
@@ -118,6 +125,7 @@
                     <a href="#"><i class="fab fa-instagram"></i></a>
                 </div>
             </div>
+
             <div class="footer-section">
                 <h4>NEWSLETTER</h4>
                 <div class="subscribe-container">
@@ -126,8 +134,9 @@
                 </div>
             </div>
         </div>
-        <p>&copy;ITOSSO Shoe Store. Powered by ITOSSO Shoe Store.</p>
+        <p>&copy;E-Commerce Shoe Store. Powered by E-Commerce Shoe Store.</p>
     </footer>
     <script src="/js/script.js"></script>
 </body>
+
 </html>
