navigation to section done

--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
                 <li class="logo">E-Commerce</li>
                 <div class="center-links">
                     <li><a href="#">HOME</a></li>
-                    <li><a href="#">SHOP</a></li>
-                    <li><a href="#">ABOUT</a></li>
-                    <li><a href="#">CONTACT</a></li>
+                    <li><a href="#product-section">SHOP</a></li>
+                    <li><a href="#footer-section">ABOUT</a></li>
+                    <li><a href="#footer-section">CONTACT</a></li>
                 </div>
 
                 <div>
@@ -94,7 +94,7 @@
     </div>
 
     <!-- Product Showcase -->
-    <section class="products">
+    <section class="products" id="product-section">
         <h2 class="p-text">Featured Products</h2>
         <div class="p-container">
             <div class="product-card">
@@ -232,7 +232,7 @@
     </section>
 
     <!-- Footer -->
-    <footer class="footer-border">
+    <footer class="footer-border" id="footer-section">
         <div class="footer-container">
             <div class="footer-section">
                 <h4>CATEGORIES</h4>
