--- a/product-page.html
+++ b/product-page.html
@@ -22,9 +22,9 @@
                 <li class="logo">E-Commerce</li>
                 <div class="center-links">
                     <li><a href="index.html">HOME</a></li>
-                    <li><a href="#">SHOP</a></li>
-                    <li><a href="#">ABOUT</a></li>
-                    <li><a href="#">CONTACT</a></li>
+                    <li><a href="#product-details-section">SHOP</a></li>
+                    <li><a href="#footer-section">ABOUT</a></li>
+                    <li><a href="#footer-section">CONTACT</a></li>
                 </div>
                 <div>
                     <li class="search">
@@ -50,51 +50,54 @@
     </nav>
 
     <!-- Product Details -->
-    <div class="product-container">
-        <div class="product-img">
-            <img id="product-image" src="" alt="product image">
+    <section id="product-details-section">
+        <div class="product-container">
+            <div class="product-img">
+                <img id="product-image" src="" alt="product image">
+            </div>
+            <div class="product-information">
+                <div class="product-heading">
+                    <h6 class="common-style">Mens, Sneaker</h6>
+                    <h2>Men's Earth-Tone Sneaker</h2>
+                </div>
+
+                <div class="product-price">
+                    <p class="price">TK 15,999.00 & Free Shipping</p>
+                </div>
+
+                <div class="product-details">
+                    <p>The Classic Blue Sneaker is a timeless staple in any wardrobe.
+                        Crafted with high-quality materials, these sneakers offer superior comfort and durability.
+                        The sleek design features a vibrant blue color, adding a pop of color to any outfit.
+                        Perfect for casual wear, these sneakers can also be dressed up for a smart-casual look.
+                        Experience the perfect blend of style and comfort with the Classic Blue Sneaker.</p>
+                </div>
+
+                <div class="add-to-cart">
+                    <form action="#">
+                        <div id="quantity-container">
+                            <button type="button" id="decrement">-</button>
+                            <span id="quantity">1</span>
+                            <button type="button" id="increment">+</button>
+                        </div>
+                        <button type="submit">ADD TO CART</button>
+                    </form>
+                </div>
+
+                <h6 class="product-cat common-style">Categories: Men, Sneaker</h6>
+                <div class="payment-methods">
+                    <h6 class="payment-information">Payment Methods</h6>
+                    <img src="/assets/svg/BKash-Logo.wine.svg" alt="Bkash">
+                    <img src="/assets/svg/294654_visa_icon.png" alt="Visa">
+                    <img src="/assets/svg/1933703_charge_credit card_debit_mastercard_payment_icon.png"
+                        alt="Mastercard">
+                </div>
+            </div>
         </div>
-        <div class="product-information">
-            <div class="product-heading">
-                <h6 class="common-style">Mens, Sneaker</h6>
-                <h2>Men's Earth-Tone Sneaker</h2>
-            </div>
-
-            <div class="product-price">
-                <p class="price">TK 15,999.00 & Free Shipping</p>
-            </div>
-
-            <div class="product-details">
-                <p>The Classic Blue Sneaker is a timeless staple in any wardrobe.
-                    Crafted with high-quality materials, these sneakers offer superior comfort and durability.
-                    The sleek design features a vibrant blue color, adding a pop of color to any outfit.
-                    Perfect for casual wear, these sneakers can also be dressed up for a smart-casual look.
-                    Experience the perfect blend of style and comfort with the Classic Blue Sneaker.</p>
-            </div>
-
-            <div class="add-to-cart">
-                <form action="#">
-                    <div id="quantity-container">
-                        <button type="button" id="decrement">-</button>
-                        <span id="quantity">1</span>
-                        <button type="button" id="increment">+</button>
-                    </div>
-                    <button type="submit">ADD TO CART</button>
-                </form>
-            </div>
-
-            <h6 class="product-cat common-style">Categories: Men, Sneaker</h6>
-            <div class="payment-methods">
-                <h6 class="payment-information">Payment Methods</h6>
-                <img src="/assets/svg/BKash-Logo.wine.svg" alt="Bkash">
-                <img src="/assets/svg/294654_visa_icon.png" alt="Visa">
-                <img src="/assets/svg/1933703_charge_credit card_debit_mastercard_payment_icon.png" alt="Mastercard">
-            </div>
-        </div>
-    </div>
+    </section>
 
     <!-- Footer -->
-    <footer class="footer-border">
+    <footer class="footer-border" id="footer-section">
         <div class="footer-container">
             <div class="footer-section">
                 <h4>CATEGORIES</h4>
@@ -117,7 +120,8 @@
             <div class="footer-section">
                 <h4>GET IN TOUCH</h4>
                 <ul>
-                    <li>Any questions?,<br>Let us know in store at 105 & 109, <br>Road -1, Block-F, Banani, Dhaka - 1213. <br> or call us on +880 1618 999 555</li>
+                    <li>Any questions?,<br>Let us know in store at 105 & 109, <br>Road -1, Block-F, Banani, Dhaka -
+                        1213. <br> or call us on +880 1618 999 555</li>
                 </ul>
                 <div class="social-accounts">
                     <a href="#"><i class="fab fa-facebook-f"></i></a>
