--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <meta name="description" content="Shop the latest shoe styles at Shoe Shop. Free shipping on all orders for EID 2024.">
+    <title>Shoe Shop - Home</title>
     <link rel="icon" href="/assets/favicon.svg">
     <link rel="stylesheet" href="lib/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 
-<body>
+<body itemscope itemtype="http://schema.org/WebPage">
     <script src="lib/bootstrap/js/bootstrap.bundle.min.js"></script>
-    <div class="top-text">Free Shipping on all orders for EID 2024</div>
+    <div class="top-text" itemprop="headline">Free Shipping on all orders for EID 2024</div>
 
     <!-- Navigation -->
     <nav>
