related products added

--- a/product-page.html
+++ b/product-page.html
@@ -48,7 +48,7 @@
             </ul>
         </div>
     </nav>
-
+    
     <!-- Product Details -->
     <section id="product-details-section">
         <div class="product-container">
@@ -94,6 +94,58 @@
                 </div>
             </div>
         </div>
+    </section>
+
+    <!-- Related Products -->
+    <section class="products" id="product-section">
+        <h2 class="p-text">Related Products</h2>
+        <div class="p-container">
+            <div class="product-card">
+                <div class="sale">Sale!</div>
+                <img class="product-image" src="images/product_1.jpg" alt="Training shoe">
+                <a class="quick-view-button" href="#">
+                    <div class="quick-view">Quick View</div>
+                </a>
+                <div class="product-info">
+                    <h4>Pink Running Shoe</h4>
+                    <p><del>TK 15,999.00</del> <span class="recent-price">TK 11,999.00</span></p>
+                    <div class="stars">
+                        ★★★★☆
+                    </div>
+                    <a href="#" onclick="goToProductPage('images/product_1.jpg')">Shop Now</a>
+                </div>
+            </div>
+
+            <div class="product-card">
+                <img class="product-image" src="images/product_2.jpg" alt="Training shoe">
+                <a class="quick-view-button" href="#">
+                    <div class="quick-view">Quick View</div>
+                </a>
+                <div class="product-info">
+                    <h4>Blue Running Shoe</h4>
+                    <p><del>TK 13,999.00</del> <span class="recent-price">TK 10,999.00</span></p>
+                    <div class="stars">
+                        ★★★☆☆
+                    </div>
+                    <a href="#" onclick="goToProductPage('images/product_2.jpg')">Shop Now</a>
+                </div>
+            </div>
+
+            <div class="product-card">
+                <div class="sale">Sale!</div>
+                <img class="product-image" src="images/product_3.jpg" alt="Training shoe">
+                <a class="quick-view-button" href="#">
+                    <div class="quick-view">Quick View</div>
+                </a>
+                <div class="product-info">
+                    <h4>Light Blue Sneaker</h4>
+                    <p><del>TK 18,999.00</del> <span class="recent-price">TK 15,999.00</span></p>
+                    <div class="stars">
+                        ★★★★☆
+                    </div>
+                    <a href="#" onclick="goToProductPage('images/product_3.jpg')">Shop Now</a>
+                </div>
+            </div>
     </section>
 
     <!-- Footer -->
